--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@prettier/plugin-php": "^0.19.4",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.7.2",
+        "lint-staged": "^13.2.1",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
         "tailwindcss": "^3.3.1",
