--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "blade-ui-kit/blade-heroicons": "^2.1",
         "brick/math": "^0.10.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
