--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.1",
         "brick/math": "^0.10.0",
+        "danharrin/livewire-rate-limiting": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
