--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "tailwind": "^4.0.0"
+        "alpinejs": "^3.12.0",
+        "sweetalert2": "^11.7.3",
+        "tailwind": "^4.0.0",
+        "toastr": "^2.1.4"
     }
 }
