--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "alpinejs": "^3.12.0",
         "sweetalert2": "^11.7.3",
+        "swiper": "^9.2.4",
         "tailwind": "^4.0.0",
         "toastr": "^2.1.4"
     }
