--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.12.0",
+        "aos": "^3.0.0-beta.6",
         "sweetalert2": "^11.7.3",
         "swiper": "^9.2.4",
         "tailwind": "^4.0.0",
