--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "blade-ui-kit/blade-heroicons": "^2.1",
         "brick/math": "^0.10.0",
         "danharrin/livewire-rate-limiting": "^1.1",
+        "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "fakerphp/faker": "^1.21",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
