--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lint-staged": "^13.2.1",
         "postcss": "^8.4.21",
         "prettier": "^2.8.7",
+        "tailwind-scrollbar": "^3.0.1",
         "tailwindcss": "^3.3.1",
         "vite": "^4.0.0"
     },
