--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "danharrin/livewire-rate-limiting": "^1.1",
         "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "fakerphp/faker": "^1.21",
+        "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
