--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "prettier": "^2.8.7",
         "tailwind-scrollbar": "^3.0.1",
         "tailwindcss": "^3.3.1",
+        "tailwindcss-plugins": "^0.3.0",
         "vite": "^4.3.5"
     },
     "dependencies": {
