--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,16 @@
         "danharrin/livewire-rate-limiting": "^1.1",
         "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "fakerphp/faker": "^1.21",
-        "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
         "ramsey/uuid": "^4.7"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "friendsofphp/php-cs-fixer": "^3.16",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
